--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.2
   url_launcher: ^6.3.0
   shared_preferences: ^2.3.2
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
